免费阅读、限时阅读提交——sl

--- a/Reading/allworks.html
+++ b/Reading/allworks.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>全部作品</title>
+		<title>全部作品_Reading中文网</title>
+		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" type="text/css" href="css/allworks.css"/>
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="css/header-footer.css" />
@@ -53,16 +54,16 @@
 						</span>
 					</li>
 					<li class="nav-li">
-						<a href="" class="act">全部作品</a>
+						<a href="allworks.html" class="act">全部作品</a>
 					</li>
 					<li class="nav-li">
 						<a href="">排行</a>
 					</li>
 					<li class="nav-li">
-						<a href="">完本</a>
+						<a href="finishworks.html">完本</a>
 					</li>
 					<li class="nav-li">
-						<a href="">免费</a>
+						<a href="free.html">免费</a>
 					</li>
 					<li class="nav-li" id="app">
 						<a href="none">
