--- a/Reading/free.html
+++ b/Reading/free.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>完本_Reading中文网</title>
+		<title>免费_Reading中文网</title>
 		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" type="text/css" href="css/allworks.css"/>
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
@@ -60,10 +60,10 @@
 						<a href="">排行</a>
 					</li>
 					<li class="nav-li">
-						<a href="finishworks.html"  class="act">完本</a>
+						<a href="finishworks.html">完本</a>
 					</li>
 					<li class="nav-li">
-						<a href="free.html">免费</a>
+						<a href="free.html"  class="act">免费</a>
 					</li>
 					<li class="nav-li" id="app">
 						<a href="none">
@@ -246,9 +246,448 @@
 				</div>
 			</div>
 		</div>
-
-		<!--完本页面的主题界面-->
-		<div class="worksmain">
+		
+		<!--免费阅读、限时免费选择-->
+		<div class="fremainhead">
+			<ul class="list-inline">
+				<li class="fremainhead_selected">限时免费</li>
+				<li>免费作品</li>
+			</ul>
+		</div>
+		<!--限时免费的显示-->
+		<div class="fremaintime">
+			<!--限时免费倒计时banner-->
+			<div class="fremaintime_banner">
+				<div class="fremaintime_banner_cd">
+					<span class="cd_day">02</span>
+					<span class="cd_hour">12</span>
+					<span class="cd_min">00</span>
+					<span class="cd_sec">00</span>
+				</div>
+			</div>
+			<div class="fremaintime_major">
+				<div class="fremaintime_major_l pull-left">
+					<!--限时免费1-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="freereads.html">
+									<img src="img/img_slin/freemajor_1.jpg"/>
+								</a>
+								<div class="books_img_grade">8.5</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="freereads.html">哈利波特之我是传奇</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">纠结于名</a><em>|</em>
+									<a href="">奇幻</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">霍法来到了哈利波特的世界，满心欢喜的他以为可以一睹传奇巫师真容，调戏正太萝莉。然而他却发现自己来到了1938年！成为了伏地魔的同学，邓布利多的学生。我的赫敏呢？我的铁三角呢？不存在</p>
+								<div class="info_major_update">
+									<a href="freereads.html">最新更新 22，感激与责难</a><em>·</em><span>2018-10-16 12:00:00</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥13</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="freereads.html">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<!--限时免费2-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="#">
+									<img src="img/img_slin/freemajor_2.jpg"/>
+								</a>
+								<div class="books_img_grade">8.7</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="">电影的世界</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">有梦之人</a><em>|</em>
+									<a href="">科幻</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">在电影的世界里唯有不断地变强，才能主宰自己的命运。“当人们看到你成功的光芒，便会忘记你手段的黑暗。”徐一凡如是地说。正版订阅群：636729383</p>
+								<div class="info_major_update">
+									<a href="">最新更新 第51章 久违的升级</a><em>·</em><span>2018-10-15 23:44:49</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥79</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<!--限时免费3-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="#">
+									<img src="img/img_slin/freemajor_3.jpg"/>
+								</a>
+								<div class="books_img_grade">9.1</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="">道缘浮图</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">烟雨江南</a><em>|</em>
+									<a href="">玄幻</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">谁家年少，煮酒调笑。盈握素腰，同舟醉邀。燕开庭的纨绔日子本来过得舒舒服服，走马章台，倾倒渭水，闲来无事再修修道，却不料被卷入一场仙家风波……</p>
+								<div class="info_major_update">
+									<a href="">最新更新 章一四二 缱绻殇</a><em>·</em><span>2018-10-14 18:37:29</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥26</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<!--限时免费4-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="#">
+									<img src="img/img_slin/freemajor_4.jpg"/>
+								</a>
+								<div class="books_img_grade">8.9</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="">美食猎人</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">紫蓝色的猪</a><em>|</em>
+									<a href="">二次元</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">一本冲着黑暗大陆而去的正常向全职猎人同人。已完结小说：火影之祸害，刀剑神域之活下去，海贼王之漫漫长路。</p>
+								<div class="info_major_update">
+									<a href="">最新更新 第1213章 洞穴深处</a><em>·</em><span>2018-10-15 23:29:38</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥128</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<!--限时免费5-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="#">
+									<img src="img/img_slin/freemajor_5.jpg"/>
+								</a>
+								<div class="books_img_grade">9.1</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="">天神诀</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">太一生水</a><em>|</em>
+									<a href="">玄幻</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">【火爆玄幻】一滴魔血，照破山河万朵。一卷古经，湮灭日月轮回。一部神诀，埋葬诸天至尊。杨青玄得天命传承，修无敌之法，开启了一场碾压当世无数天才，通往万古不朽的强者之路！“我一向以德服</p>
+								<div class="info_major_update">
+									<a href="">最新更新 第2179章 五百祭坛，鎏金魔宫</a><em>·</em><span>2018-10-16 17:30:00</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥218</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<!--限时免费6-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="#">
+									<img src="img/img_slin/freemajor_6.jpg"/>
+								</a>
+								<div class="books_img_grade">8.5</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="">重生之资本巨鳄</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">外汇似海</a><em>|</em>
+									<a href="">都市</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">一名外汇交易员重生回到了学生时代，这个野心勃勃的学生一手打造自己的超级金融垄断帝国，组建世界级大财团，缔造世界超等大豪门！资本横推华尔街，金钱席卷六大洲！他是隐藏在这颗星球幕后的终</p>
+								<div class="info_major_update">
+									<a href="">最新更新 1016‘牡丹仙子’</a><em>·</em><span>2018-10-16 11:00:00</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥100</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<!--限时免费7-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="#">
+									<img src="img/img_slin/freemajor_7.jpg"/>
+								</a>
+								<div class="books_img_grade">8.7</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="">轮回开端</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">倾世大鹏</a><em>|</em>
+									<a href="">仙侠</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">一切轮回的开端，既是从零开始的选拔，也是生与死的竞争，铁与血之间的较量。（PS：已完本三百二十万字长篇《无限之开荒者》，从未断更，人品保证，请放心收藏。）书友交流群：1951295</p>
+								<div class="info_major_update">
+									<a href="">最新更新 第十二卷 第二十八章 你当初究竟是怎么当上丐帮帮主的</a><em>·</em><span>2018-10-16 18:00:00</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥48</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<!--限时免费8-->
+					<ul>
+						<li>
+							<div class="books_img fl">
+								<a href="#">
+									<img src="img/img_slin/freemajor_8.jpg"/>
+								</a>
+								<div class="books_img_grade">8.8</div>
+							</div>
+							<div class="books_info book_info_major fl">
+								<h4><a href="">灵气复苏时代的虎</a></h4>
+								<div class="books_info_author">
+									<i class="iconfont">&#xe634;</i>
+									<a href="">木子田心敏</a><em>|</em>
+									<a href="">都市</a>
+									<span>连载中</span>
+								</div>
+								<p class="books_info_intro">看了一场流星，变成了一只老虎，还是动物园的老虎。整个世界自从自己变做老虎开始，就完全变了。鬼魂，妖类，灵兽，应有尽有。本书不倾向于化形，如果想看化形泡妹子大概是看不到了。也不是纯粹</p>
+								<div class="info_major_update">
+									<a href="">最新更新 第三百零二章 不情之请</a><em>·</em><span>2018-10-15 23:17:48</span>
+								</div>
+							</div>
+							<div class="book_info_right fr text-right">
+								<div class="book_info_right_price">
+									<p>¥0</p>
+									<s>¥13</s>
+								</div>
+								<div class="book_info_right_cart">
+									<a class="f_read" href="">免费阅读</a>
+									<a class="a_book" href="">加入书架</a>
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<div class="fremaintime_major_r pull-right">
+					<div class="fremaintime_major_r_content">
+						<h3>下期预告</h3>
+						<ul style="width: 216px;">
+							<!--预告1-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_1.jpg"/>
+									</a>
+									<div class="books_img_grade">9</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">我不是老二</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">左右言它</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">【书名起的矬，内容还尚可，一个官二代的故事，各位新看官看完三章再走不迟】主角从来都是老大，可只有李牧是老二。在家里排行二，出门被人说二，就连金手指都塔玛的是“老二”。不过幸运的是，</p>
+								</div>
+							</li>
+							<!--预告2-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_2.jpg"/>
+									</a>
+									<div class="books_img_grade">8.9</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">金庸绝学异世横行</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">御剑斋</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">茫茫昆吾山，十万零八千。灵缈一剑起，荡尽九州巅。一个现代宅男，重生武侠的世界，成为一个小门派的小师叔，意外发现身怀一个垃圾网页游戏的武学兑换系统，通过它竟然可以兑换到武侠小说中的所</p>
+								</div>
+							</li>
+							<!--预告3-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_3.jpg"/>
+									</a>
+									<div class="books_img_grade">8.5</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">世界冒险传奇</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">三月的小草</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">世界万千，人心百变。一路行来，时而崎岖波折，时而顺其自然，时而乘风入青云！血族、僵尸、恶魔、巫妖，千般血统筑其身！武学、符文、禁制、阵法，万道经诀炼其术！棋理、兵法、望心、治道，唯</p>
+								</div>
+							</li>
+							<!--预告4-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_4.jpg"/>
+									</a>
+									<div class="books_img_grade">8.7</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">崛起诸天</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">冬日之阳</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">睁开双眼，降临高武三国变身黄巾小兵，这是力量爆表的三国世界……吕布、赵云。张飞，在原本历史上就是万人敌的猛将兄，如今武力直破天际，横扫万军，崩山裂石都是等闲！还好我有金手指，能穿梭</p>
+								</div>
+							</li>
+							<!--预告5-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_5.jpg"/>
+									</a>
+									<div class="books_img_grade">8.5</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">口袋妖怪之脏套路</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">康特罗布</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">联盟公告：禁止卡普选手在比赛的时候使用一本贯手这种能把山凿穿的绝招禁止卡普选手在比赛的时候让你的卡比兽摧毁赛场禁止卡普选手让你的耿鬼在赛场上和对方的精灵用精灵语说话禁止卡普选手放纵</p>
+								</div>
+							</li>
+							<!--预告6-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_6.jpg"/>
+									</a>
+									<div class="books_img_grade">8.6</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">奶爸的田园生活</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">我喝大麦茶</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">在尔虞我诈的大城市奋斗多年的程赫，带着萌娃回到他的家乡小山村，从此开启了一段奋斗在深山的传奇……</p>
+								</div>
+							</li>
+							<!--预告7-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_7.jpg"/>
+									</a>
+									<div class="books_img_grade">2</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">神豪的悠闲人生</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">卖奶茶小哥哥</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">“双倍返利功能”：每次消费可以双倍返还。“消费好运功能”：每次消费可以随机触发好运。“桃运符”：桃花运几率倍增？……普通市民方洛偶然得到神豪系统，轻松赚钱，过悠闲人生，做隐形富豪。</p>
+								</div>
+							</li>
+							<!--预告8-->
+							<li>
+								<div class="books_img fl">
+									<a href="#">
+										<img src="img/img_slin/freeaside_8.jpg"/>
+									</a>
+									<div class="books_img_grade">6.9</div>
+								</div>
+								<div class="books_info book_info_aide fl">
+									<h4><a href="">雷霆</a></h4>
+									<div class="books_info_author">
+										<i class="iconfont authoricon">&#xe634;</i>
+										<a href="">三环少主</a>
+									</div>
+									<p class="books_info_intro book_info_aide_intro">岛国留学不忍耻辱愤然回国，潜伏在军宪警内部，具有多重间谍身份，周旋于谍女之间，几次生死、几次游刃于枪口之下，误会、暗杀、身负骂名......</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+		<!--免费作品的显示-->
+		<div class="worksmain display_hidden">
 			<div class="worksmain_aside pull-left">
 				<div class="worksmain_aside_title">
 					<ul>
@@ -480,14 +919,14 @@
 						</ul>
 					</div>
 					<!--属性-->
-					<div class="worksmain_aside_selectlist_per">
+					<!--<div class="worksmain_aside_selectlist_per">
 						<strong><p>属性</p></strong>
 						<ul class="list-unstyled list-inline">
 							<li class="selectlist_per_li_selected"><a>全部</a></li>
 							<li><a>免费</a></li>
 							<li><a>VIP</a></li>
 						</ul>
-					</div>
+					</div>-->
 					<!--字数-->
 					<div class="worksmain_aside_selectlist_per">
 						<strong><p>字数</p></strong>
@@ -1514,7 +1953,7 @@
 			</div>
 		</div>
 		<div style="clear: both;"></div>
-		
+		<!--底部-->
 		<div class="footer clearfix">
 			<div class="box-center cf">
 				<div class="friend-link">
