--- a/Reading/font/demo_fontclass.html
+++ b/Reading/font/demo_fontclass.html
@@ -13,6 +13,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont icon-zhong"></i>
+                    <div class="name">钟</div>
+                    <div class="fontclass">.icon-zhong</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-xianxia"></i>
                     <div class="name">仙侠</div>
                     <div class="fontclass">.icon-xianxia</div>
