--- a/Reading/font/demo_symbol.html
+++ b/Reading/font/demo_symbol.html
@@ -29,6 +29,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-zhong"></use>
+                    </svg>
+                    <div class="name">钟</div>
+                    <div class="fontclass">#icon-zhong</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-xianxia"></use>
                     </svg>
                     <div class="name">仙侠</div>
