--- a/Reading/font/demo_unicode.html
+++ b/Reading/font/demo_unicode.html
@@ -33,6 +33,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon iconfont">&#xe60d;</i>
+                    <div class="name">钟</div>
+                    <div class="code">&amp;#xe60d;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe61b;</i>
                     <div class="name">仙侠</div>
                     <div class="code">&amp;#xe61b;</div>
