--- a/Reading/index.html
+++ b/Reading/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>起点阅读</title>
+		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" href="css/header-footer.css" />
 		<link rel="stylesheet" href="css/index.css" />
 		<link rel="stylesheet" href="font/iconfont.css" />
