--- a/Reading/allworks.html
+++ b/Reading/allworks.html
@@ -57,7 +57,7 @@
 						<a href="allworks.html" class="act">全部作品</a>
 					</li>
 					<li class="nav-li">
-						<a href="">排行</a>
+						<a href="rank.html">排行</a>
 					</li>
 					<li class="nav-li">
 						<a href="finishworks.html">完本</a>
