--- a/Reading/finishworks.html
+++ b/Reading/finishworks.html
@@ -57,7 +57,7 @@
 						<a href="allworks.html">全部作品</a>
 					</li>
 					<li class="nav-li">
-						<a href="">排行</a>
+						<a href="rank.html">排行</a>
 					</li>
 					<li class="nav-li">
 						<a href="finishworks.html"  class="act">完本</a>
