--- a/Reading/discuss.html
+++ b/Reading/discuss.html
@@ -61,6 +61,9 @@
 	    	<div class="main-wrap-fl">
 	    		
 	    	</div>
+	    	<div class="main-wrap-fr">
+	    		
+	    	</div>
 	    </div>
 	</body>
 </html>
