--- a/Reading/allworks.html
+++ b/Reading/allworks.html
@@ -261,6 +261,13 @@
 					<p><strong>已选</strong></p>
 					<div class="worksmain_aside_selected_item">
 						<a class="all_type">全部</a>
+						<a class="select_type se_tpye display_hidden"></a>
+						<a class="select_type se_status"></a>
+						<a class="select_type se_property"></a>
+						<a class="select_type se_charnum"></a>
+						<a class="select_type se_quality"></a>
+						<a class="select_type se_uptime"></a>
+						<a class="select_type se_tip"></a>
 					</div>
 				</div>
 				<!--男生-->
@@ -996,7 +1003,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_3.jpg"/>
+									<img src="img/img_slin/books_13.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
@@ -1016,7 +1023,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_4.jpg"/>
+									<img src="img/img_slin/books_14.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
@@ -1036,7 +1043,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_5.jpg"/>
+									<img src="img/img_slin/books_15.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
@@ -1056,7 +1063,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_6.jpg"/>
+									<img src="img/img_slin/books_16.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
@@ -1077,7 +1084,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_7.jpg"/>
+									<img src="img/img_slin/books_17.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
@@ -1097,7 +1104,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_8.jpg"/>
+									<img src="img/img_slin/books_18.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
@@ -1117,7 +1124,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_9.jpg"/>
+									<img src="img/img_slin/books_19.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
@@ -1138,7 +1145,7 @@
 						<li>
 							<div class="books_img fl">
 								<a href="">
-									<img src="img/img_slin/books_10.jpg"/>
+									<img src="img/img_slin/books_20.jpg"/>
 								</a>
 							</div>
 							<div class="books_info fl">
