--- a/Reading/readpage.html
+++ b/Reading/readpage.html
@@ -93,36 +93,52 @@
 			</div>
 		</div>
 		<div class="page_reader">
-			<div class="read_content">
-				<div class="raedbook_img">
-					<img src="img/img_slin/readpage_book.jpg"/>
+			<div class="read_contentmain">
+				<!--文本上信息-->
+				<div class="text_header">
+					<h3>序</h3>	
+					<div class="read_contentmain_info">
+						<div class="contentmain_info_l fl">
+							<a href=""><i class="iconfont">&#xe67f;</i>有妖气客栈</a>
+							<a href=""><i class="iconfont">&#xe669;</i>程砚秋</a>
+							<span><i class="iconfont">&#xe663;</i>285字</span>
+							<span><i class="iconfont">&#xe60d;</i>2017.03.23 11:33</span>
+						</div>
+						<div class="contentmain_info_r fr">
+							<a href=""><i class="iconfont">&#xe60a;</i></a>
+						</div>
+					</div>
 				</div>
-				<h1 class="bookname text-center">有妖气客栈</h2>
-				<h2 class="authorname text-center"><a href="">程砚秋</a>著</h2>
-				<div class="book_info">
-					<ul class="list-inline">
-						<li>
-							<p>玄幻</p>
-							<span>类型</span>
-						</li>
-						<li>
-							<p>2017.03.03</p>
-							<span>上架</span>
-						</li>
-						<li class="margin_right0">
-							<p>157.11万</p>
-							<span>连载（字）</span>
-						</li>
-					</ul>
+				<!--阅读内容-->
+				<div class="text_main">
+					<p>　　在扬州城外，有一小镇，镇上有一家客栈。</p>
+					<p>　　客栈有条古怪的规定：不烧鱼肴。</p>
+					<p>　　客栈坐落在十字路口，一条大道由南向北，由远方而来，又向远方去。</p>
+					<p>　　又有一条大道，由大山下来，向东穿过镇子后，一直到扬州城。</p>
+					<p>　　进入镇子时，有一牌坊，牌坊上挂着一破旧剑囊，相传是剑仙留下的。</p>
+					<p>　　但客栈生意并不好，传闻山上有妖怪，由外远方来的荒野中也有怪兽，妖与鬼在徘徊。</p>
+					<p>　　也有人认为，客栈生意不好，完全是因为客栈的名字。</p>
+					<p>　　试想，旅人提心掉胆漫步过荒野，身心疲惫走进镇子准备住店时听到“有妖气”，还不拔腿就跑？</p>
+					<p>　　兽怪妖气之说，初来乍到的余生不知真假，他只知这世上有鬼魂。</p>
+					<p>　　不只因为他看得到，也因为他魂穿到了这个光怪陆离的世界。</p>
 				</div>
-				<h3 class="text-center">与<span>882.65万</span>位书友共同开启《有妖气客栈》的玄幻之旅</h3>
-				<h4 class="text-center">
-					<em>「</em>盟主<em>」</em> <a href="">燕云随风</a>  
-					<em>「</em>盟主<em>」</em> <a href="">《黄泉大帝。</a> 
-				</h4>
-				<h5 class="text-center">本书由起点中文网进行电子制作与发行</h5>
-				<h6 class="text-center">©版权所有 侵权必究</h6>
+				<!--打赏-->
+				<div class="reward">
+					<a href="" class="rewardbtn">赞赏</a>
+					<div class="rewardperson">
+						<a href=""><img src="img/img_slin/reward_person_1.jpg"/></a>
+						<a href=""><img src="img/img_slin/rewardperson_2.png"/></a>
+					</div>
+				</div>
 			</div>
+		</div>
+		<div class="page_control">
+			<a href="">上一页</a>
+			<a href="">目录</a>
+			<a href="">下一页</a>
+		</div>
+		<div class="float_control">
+			<i class="iconfont">&#xe68c;</i>
 		</div>
 	</body>
 </html>
