后台管理界面提交3

--- a/Reading/wms-autor.html
+++ b/Reading/wms-autor.html
@@ -22,7 +22,7 @@
 			<!--logo-->
 			<div class="brand ">
 				<a href="index.html">
-					<img src="img/zm-img/logo-small.png"/>
+					<img src="img/img_slin/readlogo.png" width="218px"/>
 				</a>
 			</div>
 			<!--除logo以外的东西-->
