--- a/Reading/wms-addbook.html
+++ b/Reading/wms-addbook.html
@@ -22,7 +22,7 @@
 			<!--logo-->
 			<div class="brand ">
 				<a href="index.html">
-					<img src="img/zm-img/logo-small.png"/>
+					<img src="img/img_slin/readlogo.png" width="218px"/>
 				</a>
 			</div>
 			<!--除logo以外的东西-->
@@ -116,7 +116,7 @@
 						<div class="panel-heading">
 							<h3 class="panel-title">添加图书</h3>
 						</div>
-						<div class="panel-body">
+						<div class="panel-body" style="position: relative;">
 							<p class="form-inline">
 								书名: <input type="text" class="form-control">
 							</p>
@@ -187,11 +187,14 @@
 								</div>
 			                </div>
 			                <div class="form-group h">
-			                	封面： <input type="file" id="exampleInputFile">
+			                	封面： <input type="file" id="btnimg2" onclick="imgChange2()">
 							</div>
 							<br />
 							<input type="button" class="btn btn-primary " value="确认">
 				            <input type="button" class="btn btn-default " value="重置">
+							<div class="book-img">
+								<img id="image2" width="180px" height="240px"/>
+							</div>
 						</div>
 					</div>
 				</div>
