--- a/Reading/wms-edit.html
+++ b/Reading/wms-edit.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>后台管理 | 编辑图书</title>
+		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" type="text/css" href="css/wms-index.css"/>
 		<script src="js/jquery-3.3.1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/wms-index.js" type="text/javascript" charset="utf-8"></script>			
@@ -22,7 +23,7 @@
 			<!--logo-->
 			<div class="brand ">
 				<a href="index.html">
-					<img src="img/zm-img/logo-small.png"/>
+					<img src="img/img_slin/readlogo.png" width="218px"/>
 				</a>
 			</div>
 			<!--除logo以外的东西-->
@@ -95,8 +96,8 @@
 									</ul>
 								</div>
 							</li>
-							<li><a href="#" class=""><i class="lnr lnr-users"></i> <span>作家管理</span></a></li>
-							<li><a href="#" class=""><i class="lnr lnr-license"></i> <span>用户管理</span></a></li>
+							<li><a href="wms-autor.html" class=""><i class="lnr lnr-users"></i> <span>作家管理</span></a></li>
+							<li><a href="wms-users.html" class=""><i class="lnr lnr-license"></i> <span>用户管理</span></a></li>
 							<!--<li><a href="#" class=""><i class="lnr lnr-alarm"></i> <span>订单管理</span></a></li>-->
 							
 							<!--<li><a href="#" class=""><i class="lnr lnr-dice"></i> <span>Tables</span></a></li>
@@ -181,21 +182,45 @@
 								</div>
 							</div>						
 			                <div class="h">
-			                	<button class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> 增加章节</button><br />
-			                	<div class="add-section form-inline">
+			                	<button class="btn btn-primary" id="btn_add"><span class="glyphicon glyphicon-plus"></span> 增加章节</button><br />
+			                	<!--<div class="add-section form-inline">
 			                		<p>标题： <input type="text" class="form-control"/></p>
-			                		<p>内容： <textarea  rows="5" cols="60" class="form-control"></textarea></p>
-			                	</div>
-			                	
+			                		<p>内容： <textarea   class="form-control"></textarea></p>
+			                	</div>-->
+			                	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+							        <div class="modal-dialog" role="document">
+							            <div class="modal-content">
+							                <div class="modal-header">
+							                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+							                    <h4 class="modal-title" id="myModalLabel">新增章节</h4>
+							                </div>
+							                <div class="modal-body">
+							                	<div class="form-group">
+							                        <label for="txt_departmentname">章节标题</label>
+							                        <input type="text" name="txt_departmentname" class="form-control" id="txt_departmentname" placeholder="标题">
+							                    </div>
+							                    <div class="form-group">
+							                        <label for="txt_parentdepartment">内容</label>
+							                    	<textarea rows="5" name="txt_parentdepartment" class="form-control" id="txt_parentdepartment" placeholder=""></textarea>
+							                    </div>                  
+							                </div>
+							                <div class="modal-footer">
+							                    <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>关闭</button>
+							                    <button type="button" id="btn_submit" class="btn btn-primary" data-dismiss="modal"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>保存</button>
+							                </div>
+							            </div>
+						        	</div>
+						    	</div>
 			                </div>
 							<div class="form-group h">
 			                	封面： <input type="file" id="btnimg" onclick="imgChange()">
 							</div>							
 							<br />
+							<br />
 							<input type="button" class="btn btn-primary " value="确认">
 				            <input type="button" class="btn btn-default " value="还原">
 							<div class="book-img">
-								<img id="image" />
+								<img id="image" width="180px" height="240px"/>
 							</div>
 						</div>
 					</div>
