--- a/Reading/discuss.html
+++ b/Reading/discuss.html
@@ -19,7 +19,7 @@
 			<div class="nav-wrap clearfix">
 				<div class="nav-list-fl">
 					<ul class="list-inline fl">
-						<li><a href="#">起点中文网<span class="caret"></span></a></li>
+						<li><a href="index.html">Reading中文网<span class="caret"></span></a></li>
 						<li><a href="#">玄幻</a></li>
 						<li><a href="#">都市</a></li>
 						<li><a href="#">仙侠</a></li>
@@ -405,7 +405,7 @@
 			        	<ul class="list-unstyled fans-rank">
 			        		<li class="clearfix ">
 			        			<div style="float: left;margin-left: 0px;">
-			        				<p>书友20180824070446098</p>
+			        				<p>书友201808240704</p>
 				        			<p style="margin-top: 5px;color: gray;">6471 &nbsp;粉丝值</p>
 			        			</div>
 			        			<div style="float: right;"><img src="img/image1/50 (1).png"/></div>
