--- a/Reading/freereads.html
+++ b/Reading/freereads.html
@@ -11,8 +11,7 @@
 		<script src="js/jquery.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/star-rating.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/starts.js" type="text/javascript" charset="utf-8"></script>
-		
+		<script src="js/starts.js" type="text/javascript" charset="utf-8"></script>		
 	</head>
 	<body>
 		<!--头部-->
@@ -20,7 +19,7 @@
 			<div class="nav-wrap clearfix">
 				<div class="nav-list-fl">
 					<ul class="list-inline fl">
-						<li><a href="#">起点中文网<span class="caret"></span></a></li>
+						<li><a href="index.html">Reading中文网<span class="caret"></span></a></li>
 						<li><a href="#">玄幻</a></li>
 						<li><a href="#">都市</a></li>
 						<li><a href="#">仙侠</a></li>
