--- a/Reading/login.html
+++ b/Reading/login.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>账号登录 </title>
+		<title>账号登录 _Reading中文网</title>
 		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" type="text/css" href="css/login.css"/>
 		<link rel="stylesheet" type="text/css" href="css/header-footer.css"/>
