--- a/Reading/wms-autor.html
+++ b/Reading/wms-autor.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>后台管理 | 作家管理</title>
+		<title>后台管理 | 作家管理_Reading中文网</title>
 		<link rel="stylesheet" type="text/css" href="css/wms-index.css"/>
 		<script src="js/jquery-3.3.1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/wms-index.js" type="text/javascript" charset="utf-8"></script>			
