--- a/Reading/wms-index.html
+++ b/Reading/wms-index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>后台管理 | 首页</title>
+		<title>后台管理 |首页_Reading中文网</title>
 		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" type="text/css" href="css/wms-index.css"/>
 		<script src="js/jquery-3.3.1.js" type="text/javascript" charset="utf-8"></script>
