--- a/Reading/index.html
+++ b/Reading/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>起点阅读</title>
+		<title>首页_Reading中文网</title>
 		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" href="css/header-footer.css" />
 		<link rel="stylesheet" href="css/index.css" />
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="bootstrap/js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/header-footer.js" ></script>
 		<script type="text/javascript" src="js/index.js" ></script>
+		<!--asdas-->
 	</head>
 	<body>
 		<!--移动导航-->
@@ -120,16 +121,16 @@
 						</span>
 					</li>
 					<li class="nav-li">
-						<a href="" class="act">全部作品</a>
+						<a href="allworks.html">全部作品</a>
 					</li>
 					<li class="nav-li">
-						<a href="">排行</a>
+						<a href="rank.html">排行</a>
 					</li>
 					<li class="nav-li">
-						<a href="">完本</a>
+						<a href="finishworks.html">完本</a>
 					</li>
 					<li class="nav-li">
-						<a href="">免费</a>
+						<a href="free.html">免费</a>
 					</li>
 					<li class="nav-li" id="app">
 						<a href="none">
@@ -664,7 +665,7 @@
 							<div class="description">
 								<div class="desc-wrap item1">
 									<h3>
-										<a href="#">我的成就有点多</a>
+										<a href="freereads.html">我的成就有点多</a>
 									</h3>
 									<p>为了奖励孟凡重生前的义举，宇宙意志奖励了一个系统，并将他送到了三个月前。</p>
 									<a class="read-btn" href="#">书籍详情</a>
@@ -4013,11 +4014,11 @@
 						<em class="iconfont icon-zhong"></em>
 						<p class="countdown" id="countdown">
 							<i>
-								<cite class="day">-</cite>
+								<cite class="day">2</cite>
 							</i>
 							<em>天</em>
 							<i>
-								<cite class="hour">--</cite>:<cite class="minute">--</cite>:<cite class="second">--</cite>
+								<cite class="hour">12</cite>:<cite class="minute">00</cite>:<cite class="second">00</cite>
 							</i>
 						</p>
 						<a class="blue" href="#">
