--- a/Reading/readpage.html
+++ b/Reading/readpage.html
@@ -49,13 +49,13 @@
 				<div class="headercenter_right fr">
 					<input id="searchtitle" class="searchtext" type="text" name="" id="" value="" placeholder="工资低"/>
 					<label for="searchtitle" class="searchbtn"></label>
-					<a href="">登录</a>
-					<a href="">注册</a>
+					<a href="login.html">登录</a>
+					<a href="register.html">注册</a>
 				</div>
 			</div>
 		</div>
 		<div class="can_nav">
-			<a href="">首页</a><i class="iconfont iconright">&#xe602;</i>
+			<a href="index.html">首页</a><i class="iconfont iconright">&#xe602;</i>
 			<a href="">玄幻</a><i class="iconfont iconright">&#xe602;</i>			
 			<a href="">东方玄幻</a><i class="iconfont iconright">&#xe602;</i>
 			<a href="">有妖气客栈</a><i class="iconfont iconright">&#xe602;</i>
