--- a/Reading/readpage.html
+++ b/Reading/readpage.html
@@ -14,7 +14,7 @@
 		<div class="readheader">
 			<div class="headercenter">
 				<div class="headercenter_left fl">
-					<a href="" class="headlogo"><img src="img/img_slin/readlogo.png"/></a>
+					<a href="index.html" class="headlogo"><img src="img/img_slin/readlogo.png"/></a>
 					<div class="headercenter_menu">
 						<ul class="list-inline list-unstyled">
 							<li class=" phoneread">
